Cosmetic bug fix: description columns should wrap.
git-svn-id: svn://svn.freevo.org/kaa/trunk/base@3782 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/doc/_static/kaa.css
+++ b/doc/_static/kaa.css
@@ -27,6 +27,7 @@ div.kaa.synopsis td.desc {
     padding-left: 1em;
     width: 100%;
     vertical-align: top;
+    white-space: normal;
 }
 
 div.kaa.synopsis p {
